# esp32s3-watch

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
docs/: changelog.md
docs/superpowers/plans/: 2026-06-05-watch-face.md
docs/superpowers/specs/: 2026-06-05-watch-face-design.md
main/: CMakeLists.txt  alarm_manager.c  alarm_manager.h  app_launcher.c  app_launcher.h  app_manager.c  app_manager.h  battery.cpp  battery.h  idf_component.yml  main.c  rtc_pcf85063.c  rtc_pcf85063.h  screenshot.c  screenshot.h  watch_face.c  watch_face.h
main/apps/: app_settings.c  app_settings.h
main/ble/: ble_gadgetbridge.c  ble_gadgetbridge.h  ble_manager.c  ble_manager.h  ble_nus.c  ble_nus.h
main/fonts/: font_barlow_120.c  font_barlow_172.c  font_barlow_38.c  font_barlow_56.c  font_barlow_72.c  font_spacemono_10.c  font_spacemono_40.c
main/ui/: notification_ui.c  notification_ui.h
preview/: watch_face.html  watch_face_large_date.html
tools/: screenshot.py
