idf_component_register(SRCS "main.c" "watch_face.c" "rtc_pcf85063.c"
                       "battery.cpp"
                       "fonts/font_barlow_172.c"
                       "fonts/font_barlow_120.c"
                       "fonts/font_barlow_72.c"
                       "fonts/font_barlow_38.c"
                       "fonts/font_spacemono_40.c"
                       "fonts/font_spacemono_10.c"
                       INCLUDE_DIRS ".")
